ctowasm/test/samples/error/declarations/duplicate_static.c
int main() {
  static static int x;
}